--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A screep application",
   "main": "/dist/main.js",
   "scripts": {
+    "build": "tsc -b",
     "test": "test"
   },
   "repository": {
